# ml-systems-portfolio

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  MODEL_CARD.md  README.md  README_academic.md  offline_pipeline.ipynb  pipeline.py  pyproject.toml  requirements.txt  run_eda.py  run_recommendation.py
config/: churn_pipeline.yaml
docs/: API.md  CUSTOMER_360_PLATFORM.md  ETL_TO_ARCHITECTURE.md  MLOPS.md  NETFLIX_PIPELINE.md  RESUME_BULLETS.md  fargate.md
infra/: ecs-task-definition.example.json
notebooks/: 01_data_loading.ipynb  01_offline_pipeline.ipynb  02_eda.ipynb  03_recommendation.ipynb  04_clustering.ipynb  05_rfm_analysis.ipynb  06_architecture_bridge.ipynb  README.md
projects/customer-360/: README.md
projects/customer-360/architecture/: Customer360_Architecture.drawio
projects/netflix-recommender/: ARCHITECTURE.md  README.md  clustering.py  run_data_loading.py  run_rfm.py
projects/netflix-recommender/docs/assignment/: README.md
projects/netflix-recommender/notebooks/: 01_data_loading.ipynb  02_eda.ipynb  03_recommendation.ipynb  04_clustering.ipynb  05_rfm_analysis.ipynb
projects/netflix-recommender/outputs/04_clustering/: algorithm_comparison.csv
projects/netflix-recommender/src/netflix_recommender/: __init__.py  data_io.py  paths.py  rfm.py
src/churn_pipeline/: __init__.py  artifacts.py  config.py  evaluate.py  features.py  ingestion.py  preprocess.py  s3_upload.py  train.py
src/netflix_recommender/: __init__.py  __main__.py  clustering_job.py  data_io.py  eda.py  paths.py  recommendation.py
tests/: test_config.py  test_features.py  test_preprocess.py  test_train.py
