[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "netflix-recommender"
version = "0.1.0"
description = "Netflix Prize ETL, hybrid recommender, clustering, and RFM segmentation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Yuanyuan Xie", email = "YuanyuanXie2026@u.northwestern.edu" }
]
keywords = ["recommendation-systems", "collaborative-filtering", "clustering", "rfm-segmentation", "machine-learning"]

[tool.setuptools.packages.find]
where = ["src"]
